# framework

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.redis  LICENSE.mit  Makefile  README.md  ansible.cfg.example  compose.yml  hosts  justfile  pyproject.toml  redis.conf.example  requirements.txt
config/: .bashrc.fedora  .distroboxrc  config.lua  dnf-makecache.conf  requirements.txt  starship.toml  startup.py
config/.restic/: .env.example  .restic_excludes.example  backup.sh  backup_healthchecks.sh  cleanup_snapshots.sh  restic-backup.service  restic-backup.timer  restic-prune.service
config/hypr/: hyprland.conf  hyprload.toml
md/: ansible.md  gitleaks.md
tasks/: ansible_facts.yml  chaff.yml  config.yml  docker.yml  font.yml  framework.yml  git.yml  hardening.yml  hyprland.yml  pkg.yml  user.yml  vim.yml
vars/: .env.json  k3s-nodes.yml
